welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:10: error: value =- is not a member of Int
		else y=-1
                      ^